# aihub

./: .gitignore  README.md  spec.md
contracts/: _conventions.md
contracts/embeddings/: v1.yaml
contracts/jobs/: v1.yaml
contracts/ocr/: v1.yaml
contracts/speech/: v1.yaml
contracts/tts/: v1.yaml
controller/: Dockerfile  pyproject.toml
controller/app/: adminauth.py  dockerctl.py  janitor.py  main.py  routes_data.py
deploy/: .env.example  Caddyfile  docker-compose.local.yml  docker-compose.services.yml  docker-compose.vm.yml  docker-compose.yml
deploy/traefik/: aihub.yml.example
docs/: ARCHITECTURE.md  adding-a-capability.md
gateway/: Dockerfile  pyproject.toml
gateway/app/: auth.py  dispatch.py  main.py  ratelimit.py
libs/aihub-kit/: pyproject.toml
libs/aihub-kit/aihub_kit/: __init__.py  adapter.py  config.py  db.py  errors.py  files.py  jobs.py  logging.py  manager.py  manifest.py  registry.py  service.py
libs/aihub-kit/aihub_kit/sql/: 001_init.sql  002_admin_auth.sql
panel/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
panel/src/: App.tsx  api.ts  hooks.ts  index.css  main.tsx  toast.tsx  types.ts
panel/src/components/: Badge.tsx  Card.tsx  Layout.tsx  Modal.tsx  Spinner.tsx  Table.tsx  Toggle.tsx  charts.tsx  icons.tsx
panel/src/pages/: Ajustes.tsx  Capacidades.tsx  Claves.tsx  (+6 more)
services/embeddings/: Dockerfile  manifest.yaml
services/ocr/: Dockerfile  manifest.yaml
services/speech/: Dockerfile  main.py  manifest.yaml
services/tts/: Dockerfile  manifest.yaml
(+5 files in other folders)
