[project]
name = "aihub-kit"
version = "0.1.0"
description = "Librería compartida de servicios del AI Hub"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aihub_kit*"]

[tool.setuptools.package-data]
aihub_kit = ["sql/*.sql"]
